mitad de los videos

--- a/style.css
+++ b/style.css
@@ -4,3 +4,64 @@
 font-family: 'Bebas Neue', sans-serif;
 font-family: 'Poppins', sans-serif;
 */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f1f4fd;
+}
+img{
+    max-width: 100%;
+}
+.container {
+    max-width: 120%;
+    margin: 0 auto;
+}
+.menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+.logo {
+    color: #000d83;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+.menu .navbar ul {
+    display: flex;
+} 
+.menu .navbar ul li a {
+    font-size: 18px;
+    padding: 0 20px;
+    color: #000d83;
+    display: block;
+    font-weight: 600;
+}
+.menu.navbar ul li a:hover {
+    color: #3ec4ff;
+}
+#menu {
+    display: none;
+}
+.menu-icono {
+    width: 25px;
+}
+.menu label {
+    cursor: pointer;
+    display: none;
+}
+.header-content {
+    display: flex;
+    padding: 80px 0 0 0;
+}
+.header-txt {
+    flex-basis: 50%;
+    padding-right: 30px;
+}
