--- a/style.css
+++ b/style.css
@@ -119,31 +119,210 @@ p {
 }
 .brands-1 img {
   width: 150px;
-}.services {
-    padding: 100px 0;
-    text-align: center;
+}
+.services {
+  padding: 100px 0;
+  text-align: center;
 }
 h2 {
-    font-size: 40px;
-line-height: 1;
-color: #000d83;
-margin-bottom: 20px;
+  font-size: 40px;
+  line-height: 1;
+  color: #000d83;
+  margin-bottom: 20px;
 }
 .services-content {
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 .services-1 {
-    flex-basis: calc(20% - 30px);
-    background-color: #fbfcfe;
-    padding: 40px;
-    box-shadow: 0 0 10px rgba(33, 40, 105, 0.2);
-    color: #000d83;
+  flex-basis: calc(20% - 30px);
+  background-color: #fbfcfe;
+  padding: 40px;
+  box-shadow: 0 0 10px rgba(33, 40, 105, 0.2);
+  color: #000d83;
 }
 .services-1:hover {
-    background-color: #000d83;
-    color: white;
-    cursor: pointer;
+  background-color: #000d83;
+  color: white;
+  cursor: pointer;
 }
- 
+.services-1 img {
+  width: 35px;
+  height: 35px;
+  margin-bottom: 10px;
+}
+.services-1 h3 {
+  font-size: 20px;
+  line-height: 1.2;
+}
+.information {
+  padding: 50px 0 100px 0;
+  display: flex;
+  align-items: center;
+}
+.information-img {
+  flex-basis: 50%;
+}
+.information-txt {
+  flex-basis: 50%;
+  padding-left: 50px;
+}
+.about {
+  padding: 80px 0;
+  background-color: #eefaff;
+}
+.about-content {
+  display: flex;
+  align-items: center;
+}
+.about-txt {
+  flex-basis: 50%;
+  padding-right: 80px;
+}
+.about-img {
+  flex-basis: 50%;
+}
+.contact {
+  padding: 120px 0;
+  text-align: center;
+}
+form {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+input {
+  width: 300px;
+  padding: 17;
+  border: 0;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(33, 40, 105, 0.2);
+  margin-right: 20px;
+}
+.footer {
+  background-color: #0d0541;
+  padding: 50px 0;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+.link h3 {
+  color: white;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.link a {
+  color: #c8c8c8;
+  font-size: 18px;
+  display: block;
+  margin-bottom: 10px;
+}
+.link a:hover {
+  color: #3ec4ff;
+}
+@media (max-width: 991px) {
+  .menu {
+    padding: 20px;
+    position: relative;
+  }
+  .menu label {
+    display: initial;
+  }
+  .menu .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: #3ec4ff;
+    display: none;
+  }
+  .menu.navbar ul {
+    flex-direction: column;
+  }
+  .menu.navbar ul li {
+    width: 100px;
+    padding: 20px 0;
+  }
+  .menu.navbar ul li a:hover {
+    color: #ffff;
+  }
+  #menu:checked ~ .navbar {
+    display: initial;
+  }
+  .header-content{
+    padding: 20px 30px;
+    flex-direction: column;
+    text-align: center;
+  }
+  .header-txt{
+    padding: 0;
+    margin-bottom: 15px;
+  }
+  p{
+    margin-bottom: 30px;
+  }
+  .brands{
+    padding: 30px;
+    margin: 0 30px;
+    flex-direction: column;
+  } 
+  .brands-1{
+    text-align: center;
+  }
+  .brands-1 p {
+    margin-bottom: 15px;
+  }
+  .brands-1 img{
+    margin-bottom: 10px;
+  }
+  .services{
+    padding: 50px 30px 30px 30px;
+  }
+  .services-content{
+    flex-direction: column;
+  }
+  .services-1{
+    margin-bottom: 30px;
+  }
+  .information{
+    padding: 0 30px 30px 30px;
+    flex-direction: column;
+    text-align: center;
+  }
+  .information-txt{
+    padding: 0 0 30px 0;
+  }
+  .information-img{
+    order: 2;
+  }
+  .about{
+    padding: 30px;
+  }
+  .about-content{
+    flex-direction: column;
+    text-align: center;
+  }
+  .about-txt{
+    padding: 0 0 30px 0;
+  }
+  .contact{
+    padding: 50px 80px;
+  }
+  form{
+    flex-direction: column;
+  }
+  input{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .footer{
+    padding: 30px;
+  }
+  .footer-content{
+    flex-direction: column;
+    text-align: center;
+  }
+}
