--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ font-family: 'Poppins', sans-serif;
 */
 * {
   margin: 0;
-  padding: 0;
+  padding: 5;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
@@ -322,7 +322,7 @@ input {
     padding: 30px;
   }
   .footer-content{
-    flex-direction: column;
+    /* flex-direction: column; */
     text-align: center;
   }
 }
